--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha --recursive --exit",
     "start": "node server.js",
-    "devstart": "nodemon server.js"
+    "devstart": "nodemon server.js",
+    "build": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,13 @@
   },
   "homepage": "https://github.com/abandisch/gym-tracker-app#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "mocha": "^5.0.0"
+    "mocha": "^5.0.0",
+    "webpack": "^3.10.0"
   }
 }
