Gym page tests - in progress

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to track gym exercises",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --recursive --exit",
+    "test": "mocha --recursive --exit --require babel-register",
     "start": "node server.js",
     "devstart": "nodemon server.js",
     "build": "webpack --watch",
@@ -25,6 +25,10 @@
     "jquery": "^3.3.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "concurrently": "^3.5.1",
