--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/abandisch/gym-tracker-app#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "mongoose": "^5.0.3",
+    "morgan": "^1.9.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -32,6 +36,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "concurrently": "^3.5.1",
+    "faker": "^4.1.0",
     "mocha": "^5.0.0",
     "webpack": "^3.10.0"
   }
