--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   "homepage": "https://github.com/abandisch/gym-tracker-app#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.3",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
