--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/abandisch/gym-tracker-app#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
