--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "concurrently": "^3.5.1",
     "faker": "^4.1.0",
     "mocha": "^5.0.0",
+    "nyc": "^11.4.1",
     "webpack": "^3.10.0"
   }
 }
