Update travis.yml to include mongo

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "App to track gym exercises",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon --exec \"mocha --recursive --require babel-polyfill --require babel-register\"",
+    "test": "mocha --recursive --require babel-polyfill --require babel-register",
     "start": "node server.js",
     "devstart": "nodemon server.js",
+    "devtest": "nodemon --exec \"mocha --recursive --require babel-polyfill --require babel-register\"",
     "build": "webpack --watch",
     "//": "devstart: concurrently nodemon server.js webpack --watch"
   },
