--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "devstart": "nodemon server.js",
     "devtest": "nodemon --exec \"mocha --recursive --require babel-polyfill --require babel-register\"",
     "build": "webpack --watch",
-    "//": "devstart: concurrently nodemon server.js webpack --watch"
+    "devconcurrent": "concurrently \"nodemon server.js\" \"webpack --watch\""
   },
   "repository": {
     "type": "git",
